--- a/BudgetManager/BudgetManager/BudgetManager/Views/AboutPage.xaml
+++ b/BudgetManager/BudgetManager/BudgetManager/Views/AboutPage.xaml
@@ -1,52 +1,66 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:Charts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms"
              x:Class="BudgetManager.Views.AboutPage"
-             xmlns:vm="clr-namespace:BudgetManager.ViewModels"
              Title="{Binding Title}">
-    
-    <ContentPage.BindingContext>
-        <vm:AboutViewModel />
-    </ContentPage.BindingContext>
-    
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <Color x:Key="Accent">#96d1ff</Color>
-        </ResourceDictionary>
-    </ContentPage.Resources>
-
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <StackLayout BackgroundColor="{StaticResource Accent}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
-                <ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-                    <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
-                </ContentView>
-            </StackLayout>
+    <StackLayout>
+        <StackLayout HorizontalOptions="CenterAndExpand">
+            <Label Text="Select Year:" HorizontalOptions="Center" />
+            <Frame BorderColor="Gray" HasShadow="False" Padding="0">
+                <Picker x:Name="yearPicker" Title="Year" 
+                HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
+                BackgroundColor="White"
+                SelectedIndexChanged="OnSelectYearClicked" />
+            </Frame>
         </StackLayout>
-        <ScrollView Grid.Row="1">
-            <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
-                <Label Text="Start developing now" FontSize="Title"/>
-                <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="0,0,0,0"/>
-                <Label FontSize="16" Padding="0,24,0,0">
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="Learn more at "/>
-                                <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
-                <Button Margin="0,10,0,0" Text="Learn more"
-                        Command="{Binding OpenWebCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
-            </StackLayout>
-        </ScrollView>
-    </Grid>
+        <ScrollView>
+            <Grid RowDefinitions="300,300,300,300" Padding="10">
 
+                <Charts:ChartView Grid.Row="0"
+                        Chart="{Binding MultiLinesChart}"
+                        HeightRequest="300"
+                        VerticalOptions="Start"
+                        HorizontalOptions="Fill"/>
+
+                <Grid Grid.Row="1">
+                    <Charts:ChartView
+                        Chart="{Binding LineChart}"
+                        HeightRequest="300"
+                        VerticalOptions="Start"
+                        HorizontalOptions="Fill"
+                        Margin="0,15,0,0"/>
+                    <Label Text="Incomes" FontSize="16" HorizontalOptions="Center" VerticalOptions="Start" Margin="0,0,0,0"/>
+                </Grid>
+
+
+                <Grid Grid.Row="2">
+                    <Charts:ChartView
+                        Chart="{Binding LineChart2}"
+                        HeightRequest="300"
+                        VerticalOptions="Start"
+                        HorizontalOptions="Fill"
+                        Margin="0,15,0,0"/>
+                    <Label Text="Expenses" FontSize="16" HorizontalOptions="Center" VerticalOptions="Start" Margin="0,0,0,0"/>
+                </Grid>
+
+
+                <Charts:ChartView Grid.Row="3"
+                        Chart="{Binding MultiBarChart}"
+                        HeightRequest="300"
+                        VerticalOptions="Start"
+                        HorizontalOptions="Fill"/>
+
+                <Grid Grid.Row="4">
+                    <Charts:ChartView
+                        Chart="{Binding DonutChart}"
+                        HeightRequest="300"
+                        VerticalOptions="Start"
+                        HorizontalOptions="Fill"
+                        Margin="0,15,0,0"/>
+                    <Label Text="Transaction types" FontSize="16" HorizontalOptions="Center" VerticalOptions="Start" Margin="0,0,0,0"/>
+                </Grid>
+            </Grid>
+    </ScrollView>
+    </StackLayout>
 </ContentPage>
